@@ -6,7 +6,8 @@ Section: net
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: Raúl Sánchez Siles <rasasi78@gmail.com>,
- Kai Wasserbäch <debian@carbon-project.org>
+ Kai Wasserbäch <debian@carbon-project.org>,
+ Mark Purcell <msp@debian.org>
 Standards-Version: 3.8.3
 Vcs-Hg: http://hg.debian.org/hg/pkg-kde/kde-extras/kvirc/
 Vcs-Browser: http://hg.debian.org/hg/pkg-kde/kde-extras/kvirc/
